# all-linux-files

./: .gitignore  README.md  RUST_IMPLEMENTATION_PLAN.md  RUST_IMPLEMENTATION_SUMMARY.md  SECURITY_ANALYSIS.md  alf.sh  implementation_plan.md
conductor/: repo-init-plan.md
linux_everything_rust/: Cargo.toml  build.rs  release.sh
linux_everything_rust/assets/: index.html  linux-everything-daemon.service  linux-everything.desktop  linux-everything.service
linux_everything_rust/src/: main.rs
linux_everything_rust/src/cli/: mod.rs
linux_everything_rust/src/database/: mod.rs
linux_everything_rust/src/gui/: mod.rs
linux_everything_rust/src/indexer/: mod.rs
linux_everything_rust/src/watcher/: mod.rs
llm_autocomplete/: README.md  requirements.txt  test_engine.py
llm_autocomplete/docs/research/: 383_autocomplete_on_steroids.txt  383_autocomplete_on_steroids12.txt
llm_autocomplete/src/: client.py  engine.py  main.py  prompts.py  types.py
src/: db.py  gui.py  indexer.py  main.py  watcher.py  web_gui.py
src/templates/: index.html
